[gd_scene load_steps=7 format=2]

[ext_resource path="res://Main/Main.gd" type="Script" id=1]
[ext_resource path="res://Screens/Menu/Menu.tscn" type="PackedScene" id=2]
[ext_resource path="res://Screens/OnlinePlay/OnlinePlay.tscn" type="PackedScene" id=3]
[ext_resource path="res://Screens/Login/Login.tscn" type="PackedScene" id=4]
[ext_resource path="res://Game/Game.tscn" type="PackedScene" id=5]
[ext_resource path="res://Screens/Loading/Loading.tscn" type="PackedScene" id=6]

[node name="Main" type="Node"]
script = ExtResource( 1 )

[node name="Menu" parent="." instance=ExtResource( 2 )]

[node name="Login" parent="." instance=ExtResource( 4 )]
visible = false

[node name="OnlinePlay" parent="." instance=ExtResource( 3 )]
visible = false

[node name="Loading" parent="." instance=ExtResource( 6 )]
visible = false

[node name="Game" parent="." instance=ExtResource( 5 )]

[connection signal="playOnline" from="Menu" to="." method="_on_Menu_playOnline"]
[connection signal="loggedIn" from="Login" to="." method="_on_Login_loggedIn"]
[connection signal="gameCreated" from="OnlinePlay" to="." method="_on_OnlinePlay_gameCreated"]
[connection signal="logout" from="OnlinePlay" to="." method="_on_OnlinePlay_logout"]
